// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OtherReturnDestinationAddress individual is filling out form for a group 1`] = `
<FormSection>
  <ProgressIndicator
    sectionName="Plan their return journey"
    sectionPosition="Section 4 of 5"
  />
  <Question
    text="What address is the group going to?"
  />
  <Address
    addresses={Array []}
    checkInside={true}
    prefix="otherReturnDestination"
  />
</FormSection>
`;

exports[`OtherReturnDestinationAddress individual is filling out form for someone else 1`] = `
<FormSection>
  <ProgressIndicator
    sectionName="Plan their return journey"
    sectionPosition="Section 3 of 4"
  />
  <Question
    text="What address does John want to go to?"
  />
  <Address
    addresses={Array []}
    checkInside={true}
    prefix="otherReturnDestination"
  />
</FormSection>
`;

exports[`OtherReturnDestinationAddress individual is filling out form for themselves 1`] = `
<FormSection>
  <ProgressIndicator
    sectionName="Plan your return journey"
    sectionPosition="Section 3 of 4"
  />
  <Question
    text="What address do you want to go to?"
  />
  <Address
    addresses={Array []}
    checkInside={true}
    prefix="otherReturnDestination"
  />
</FormSection>
`;
